@@ -1,7 +1,7 @@
 {
   "name": "patternlab-node",
   "description": "Pattern Lab is a collection of tools to help you create atomic design systems. This is the node command line interface (CLI).",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-contrib-watch": "~0.2.0",
@@ -20,6 +20,10 @@
     "Grunt",
     "Javascript"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/pattern-lab/patternlab-node.git"
+  },
   "author": "Brian Muenzenmeyer",
   "license": "MIT",
   "scripts": {
@@ -27,5 +31,6 @@
   },
   "engines": {
     "node": ">=0.8"
-  }
+  },
+  "debug": false
 }
